# django-salmon

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test_release.yml  zizmor.yml
example_project/: manage.py
example_project/example/: __init__.py  settings.py  urls.py  wsgi.py
example_project/testapp/: __init__.py  apps.py  receivers.py  urls.py  views.py
example_project/testapp/templates/: example_page.html  index.html
example_project/testapp/templates/cache/: cache_api_operations.html  cached_template_fragments.html  cached_view.html
src/django_observe/: __init__.py  apps.py  cache.py  config.py  decorators.py  registry.py  signals.py
src/django_observe/hacks/: __init__.py  cache.py
src/django_salmon/: __init__.py  apps.py  cache.py  config.py  decorators.py  registry.py
src/django_salmon/hacks/: __init__.py  cache.py
tests/: __init__.py  settings.py  test_cache.py  test_config.py  test_decorators.py  test_registry.py  urls.py
tests/hacks/: test_cache.py  test_hacks.py
